<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="68dp"
        android:background="@color/bg"
        android:orientation="horizontal" >



        <Button
            android:id="@+id/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/locationButton" />

        <Button
            android:id="@+id/floorMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/floorMapButton" />

        <Button
            android:id="@+id/floorRoomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/floorRoomButton" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/frameLayoutImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/buildingImageView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/buildingImageView"
                android:src="@drawable/bf_7_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frameLayoutText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textRoomList"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>