<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.inucampusmap.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/inu_main"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
		android:layout_weight="1"
		android:orientation="horizontal" >

        <Button
            android:id="@+id/buildingButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/building_main"
            android:gravity="bottom|right"
            android:onClick="onClick"
            android:text="@string/buildingButton"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/useButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/info_main"
            android:gravity="bottom|right"
            android:onClick="onClick"
            android:text="@string/useButton"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
		android:layout_weight="1"
		android:orientation="horizontal" >

        <Button
            android:id="@+id/starButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/star_main"
            android:gravity="bottom|right"
            android:onClick="onClick"
            android:text="@string/starButton"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/mapButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/campus_main"
            android:gravity="bottom|right"
            android:onClick="onClick"
            android:text="@string/mapButton"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

</LinearLayout>
